Closed Bug 1605956 Opened 4 years ago Closed 4 years ago

Invalidate scroll anchor less on visual viewport offset updates

Categories

(Core :: Layout: Scrolling and Overflow, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

Part of the issue in bug 1605599 is that scroll anchoring "doesn't work" because of a sub-pixel visual viewport update.

But in this case it is silly to invalidate it because we're not even using the visual viewport to select scroll anchors.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6e7398f94515
Don't invalidate scroll anchor on visual viewport offset updates if visual viewport size is not set. r=botond
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: