Bug 1605956 - Don't invalidate scroll anchor on visual viewport offset updates if visual viewport size is not set. r=botond

As we only use the offset if the visual viewport size is set.

Differential Revision: https://phabricator.services.mozilla.com/D58226